--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="TC_1">#333333</color>
     <color name="TC_2">#999999</color>
     <color name="TC_3">#ff6d6d</color>
+    <color name="TC_4">#FF3939</color>
 </resources>
