--- a/app/src/main/res/layout/fragment_task_control_point_edit.xml
+++ b/app/src/main/res/layout/fragment_task_control_point_edit.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:background="@color/background_gray"
-    android:descendantFocusability="afterDescendants"
-    android:layout_height="match_parent">
-
     <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/background_gray"
@@ -19,4 +14,3 @@
             android:overScrollMode="never"
             android:scrollbars="none" />
     </LinearLayout>
-</ScrollView>
