选择图片bug修复

--- a/app/src/main/res/drawable/equipment_type_normal_shape.xml
+++ b/app/src/main/res/drawable/equipment_type_normal_shape.xml
@@ -3,7 +3,7 @@
     <solid android:color="@color/white"/>
     <stroke
         android:width="1dp"
-        android:color="@color/background_gray"/>
+        android:color="@color/TC_2"/>
     <!--<padding-->
     <!--android:bottom="1dp"-->
     <!--android:left="1dp"-->
